--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "esm": "^3.2.25",
+    "uuid": "^9.0.1"
   }
 }
